Index.ejs no longer renders background video on mobile. Background image added from first frame of video.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -20,13 +20,19 @@ header h1{
   color: hotpink;
   padding-bottom: 40px;
 }
-header div{
+header .videoWrapper{
+  width: 100%;
+  position: fixed;
+  z-index: -1;
+  display: none;
+}
+header .search{
   max-width: 95%;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-header input{
+header .search input{
   height:40px;
   width:70%;
 }
@@ -36,11 +42,6 @@ button{
   opacity: 60%;
   border-radius: 25px;
   font-size: 11.5px;
-}
-
-video{
-  position: fixed;
-  z-index: -1;
 }
 
 #savedCities{
@@ -239,6 +240,9 @@ nav button{
 @media screen and (min-width:1024px){
   header h1{
     font-size: 8.75em;
+  }
+  header .videoWrapper{
+    display: block;
   }
   #avgCard{
     width: 40%;
